--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Nossos Objetivos do Ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">Começar na academia! (Gabi)</button>
+            <button class="botao ativo">Começar na academia! (Gabi)</button>
             <button class="botao">Passar de ano sem nota vermelha! (Ana)</button>
             <button class="botao">Criar um portfolio de ilustrações! (Madu)</button>
             <button class="botao">Fazer uma arte em conjunto!</button>
         </div>
+        <div class="abas-texto">
+            <div class="aba-conteudos>"
+                <h3 class=""
+             
+        
+        </div>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
