--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -19,7 +19,7 @@
         </div>
         <div class="abas-texto">
             <div class="aba-conteudos>"
-                <h3 class=""
+                <h3 class="aba-conteudo-titulo-principal">Começar a me exercitar na academia para uma saúde melhor!</h3>
              
         
         </div>
