--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
         <div class="abas-texto">
             <div class="aba-conteudos>"
                 <h3 class="aba-conteudo-titulo-principal">Começar a me exercitar na academia para uma saúde melhor!</h3>
-             
-        
+                <h4 class="aba-conteudo-titulo-secundario">Me empenhar nos estudos para passar o ano sem notas vermelhas!</h4>
+        </div>
+    <div class="abas-texto">
+            <div class="aba-conteudos>"
+                <h3 class="aba-conteudo-titulo-principal">Começar a me exercitar na academia para uma saúde melhor!</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Me empenhar nos estudos para passar o ano sem notas vermelhas!</h4>
         </div>
     </section>
     <script src="main.js"></script>
