--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
         <div class="abas-texto">
             <div class="aba-conteudos>"
                 <h3 class="aba-conteudo-titulo-principal">Começar a me exercitar na academia para uma saúde melhor!</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Me empenhar nos estudos para passar o ano sem notas vermelhas!</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Juntar um pouco de dinheiro para poder pagar a mensalidade e focar em melhorar minha saúde.</h4>
+        </div>
+            <div class="aba-conteudos>"
+                <h3 class="aba-conteudo-titulo-principal">Passar o último ano do E.M. sem notas vermelhas!</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Focar nos estudos e atividades, evitando atrasar tarefas.</h4>
         </div>
             <div class="aba-conteudos>"
                 <h3 class="aba-conteudo-titulo-principal">Procurar um site para colocar minhas melhores ilustrações e projetos, assim criando um portfólio.</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Todas nós desenhar uma arte única em conjunto.</h4>
         </div>
+            <div class="aba-conteudos>"
+                <h3 class="aba-conteudo-titulo-principal">Procurar um site para colocar minhas melhores ilustrações e projetos, assim criando um portfólio.</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Todas nós desenhar uma arte única em conjunto.</h4>
+        </div>
+        
     </section>
     <script src="main.js"></script>
 </body>
