--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Nossos Objetivos do Ano<span>_</span></h2>
+        <div class="conteudo"> 
         <div class="botoes">
             <button class="botao ativo">Começar na academia! (Gabi)</button>
             <button class="botao">Passar de ano sem nota vermelha! (Ana)</button>
             <button class="botao">Criar um portfolio de ilustrações! (Madu)</button>
             <button class="botao">Fazer uma arte em conjunto!</button>
         </div>
+
         <div class="abas-texto">
             <div class="aba-conteudos>"
                 <h3 class="aba-conteudo-titulo-principal">Começar a me exercitar na academia para uma saúde melhor!</h3>
@@ -35,6 +37,7 @@
                 <h4 class="aba-conteudo-titulo-secundario">Todas nós desenhar uma arte única em conjunto.</h4>
         </div>
         
+        </div>
     </section>
     <script src="main.js"></script>
 </body>
