--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
 
         <div class="abas-texto">
+            <div class="aba-conteudo ativo">
             <div class="aba-conteudos>"
                 <h3 class="aba-conteudo-titulo-principal">Começar a me exercitar na academia para uma saúde melhor!</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Juntar um pouco de dinheiro para poder pagar a mensalidade e focar em melhorar minha saúde.</h4>
