--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="aba-conteudos>"
                 <h3 class="aba-conteudo-titulo-principal">Começar a me exercitar na academia para uma saúde melhor!</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Juntar um pouco de dinheiro para poder pagar a mensalidade e focar em melhorar minha saúde.</h4>
+                <div class="contador"></div>
         </div>
             <div class="aba-conteudos>"
                 <h3 class="aba-conteudo-titulo-principal">Passar o último ano do E.M. sem notas vermelhas!</h3>
