--- a/index.html
+++ b/index.html
@@ -4,41 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nossos objetivos do ano - 3B</title>
+    <title>Meus objetivos do ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Nossos Objetivos do Ano<span>_</span></h2>
-        <div class="conteudo"> 
-        <div class="botoes">
-            <button class="botao ativo">Começar na academia! (Gabi)</button>
-            <button class="botao">Passar de ano sem nota vermelha! (Ana)</button>
-            <button class="botao">Criar um portfolio de ilustrações! (Madu)</button>
-            <button class="botao">Fazer uma arte em conjunto!</button>
-        </div>
-
-        <div class="abas-texto">
-            <div class="aba-conteudo ativo">
-            <div class="aba-conteudos>"
-                <h3 class="aba-conteudo-titulo-principal">Começar a me exercitar na academia para uma saúde melhor!</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Juntar um pouco de dinheiro para poder pagar a mensalidade e focar em melhorar minha saúde.</h4>
-                <div class="contador"></div>
-        </div>
-            <div class="aba-conteudos>"
-                <h3 class="aba-conteudo-titulo-principal">Passar o último ano do E.M. sem notas vermelhas!</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Focar nos estudos e atividades, evitando atrasar tarefas.</h4>
-        </div>
-            <div class="aba-conteudos>"
-                <h3 class="aba-conteudo-titulo-principal">Procurar um site para colocar minhas melhores ilustrações e projetos, assim criando um portfólio.</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Todas nós desenhar uma arte única em conjunto.</h4>
-        </div>
-            <div class="aba-conteudos>"
-                <h3 class="aba-conteudo-titulo-principal">Procurar um site para colocar minhas melhores ilustrações e projetos, assim criando um portfólio.</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Todas nós desenhar uma arte única em conjunto.</h4>
-        </div>
-        
+        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <div class="conteudo">
+            <div class="botoes">
+                <button class="botao ativo">Cursos na Alura</button>
+                <button class="botao">Criar projetos em Javascript</button>
+                <button class="botao">Criar um portfolio</button>
+                <button class="botao">Atualizar meu currículo</button>
+            </div>
+            <div class="abas-textos">
+                <div class="aba-conteudo ativo">
+                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
